--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,57 @@
+contourpy==1.3.2
+cycler==0.12.1
 filelock==3.20.2
+fonttools==4.61.1
 fsspec==2025.12.0
 Jinja2==3.1.6
 joblib==1.5.3
+kiwisolver==1.4.9
 MarkupSafe==3.0.3
+matplotlib==3.10.8
 mpmath==1.3.0
 networkx==3.4.2
 numpy==2.2.6
+nvidia-cublas==13.0.0.19
 nvidia-cublas-cu12==12.8.4.1
+nvidia-cuda-cupti==13.0.48
 nvidia-cuda-cupti-cu12==12.8.90
+nvidia-cuda-nvrtc==13.0.48
 nvidia-cuda-nvrtc-cu12==12.8.93
+nvidia-cuda-runtime==13.0.48
 nvidia-cuda-runtime-cu12==12.8.90
 nvidia-cudnn-cu12==9.10.2.21
+nvidia-cudnn-cu13==9.13.0.50
+nvidia-cufft==12.0.0.15
 nvidia-cufft-cu12==11.3.3.83
+nvidia-cufile==1.15.0.42
 nvidia-cufile-cu12==1.13.1.3
+nvidia-curand==10.4.0.35
 nvidia-curand-cu12==10.3.9.90
+nvidia-cusolver==12.0.3.29
 nvidia-cusolver-cu12==11.7.3.90
+nvidia-cusparse==12.6.2.49
 nvidia-cusparse-cu12==12.5.8.93
 nvidia-cusparselt-cu12==0.7.1
+nvidia-cusparselt-cu13==0.8.0
 nvidia-nccl-cu12==2.27.5
+nvidia-nccl-cu13==2.27.7
+nvidia-nvjitlink==13.0.39
 nvidia-nvjitlink-cu12==12.8.93
 nvidia-nvshmem-cu12==3.3.20
+nvidia-nvshmem-cu13==3.3.24
+nvidia-nvtx==13.0.39
 nvidia-nvtx-cu12==12.8.90
+packaging==25.0
 pillow==12.1.0
+pyparsing==3.3.1
+python-dateutil==2.9.0.post0
 scikit-learn==1.7.2
 scipy==1.15.3
+six==1.17.0
 sympy==1.14.0
 threadpoolctl==3.6.0
-torch==2.9.1
-torchvision==0.24.1
+torch==2.9.1+cu130
+torchvision==0.24.1+cu130
 tqdm==4.67.1
 triton==3.5.1
 typing_extensions==4.15.0
